# nextgame

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  justfile  mprocs.yaml  package-lock.json  package.json  wrangler.toml
.github/: dependabot.yml
.github/workflows/: ci_cd.yaml  golive.yaml
api/: .gitignore  Cargo.toml  justfile  package.json  pnpm-lock.yaml  wrangler.toml
api/src/: lib.rs  service.rs  types.rs
src/: lib.rs  random.rs
templates/: footer.html  head.html  home.html  new_team.html  player-reg.html  team.html  team_admin.html  team_no_game.html
web/: .gitignore  index.html  justfile  package.json  pnpm-lock.yaml  tsconfig.json
web/src/: App.tsx  api.ts  index.tsx  styles.css  types.ts
web/src/components/: Comments.tsx  Description.tsx  GameOff.tsx  GuestForm.tsx  Header.tsx  NewGameForm.tsx  PlayerRoster.tsx  SquadBoard.tsx
web/src/components/admin/: DefaultSquads.tsx  Manage.tsx  Players.tsx  Schedule.tsx
web/src/pages/: Admin.tsx  Home.tsx  Team.tsx
