[package]
name = "nextgame"
description = "Who's playing?!"
authors = ["LOU Xun <aquarhead@gmail.com>"]
repository = "https://github.com/aquarhead/nextgame"
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.4"
worker-kv = "*"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
minijinja = "2"
minijinja-embed = "2"
getrandom = { version = "*", features = ["js"] }
sha3 = { version = "0.10", default-features = false }
hex = { version = "0.4" }
pulldown-cmark = "0.12"
cron-parser = "0.9"
chrono = "0.4"
chrono-tz = { version = "0.10", features = ["serde"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[build-dependencies]
minijinja-embed = "2"
