[package]
name = "nextgame"
description = "Who's playing?!"
authors = ["LOU Xun <aquarhead@gmail.com>"]
repository = "https://github.com/aquarhead/nextgame"
license = "MIT"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7"
worker-kv = "*"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
minijinja = "2"
minijinja-embed = "2"
getrandom = { version = "0.3", features = ["wasm_js"] }
sha3 = { version = "0.10", default-features = false }
hex = { version = "0.4" }
pulldown-cmark = "0.13"
urlencoding = "2"
jiff = { version = "0.2", features = ["js", "serde"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[build-dependencies]
minijinja-embed = "2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
